--- a/android/bt-client/src/main/res/layout/activity_main.xml
+++ b/android/bt-client/src/main/res/layout/activity_main.xml
@@ -99,7 +99,8 @@
         <TextView
             android:id="@+id/textMode"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="44dp"
+            android:text="prova" />
     </LinearLayout>
 
     <LinearLayout
